--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,65 +5,88 @@ on:
   pull_request:
 
 jobs:
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
+  clippy:
+    name: Clippy ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
     steps:
       - uses: actions/checkout@v2
-      - name: 'Log versions'
-        run: |
-          rustc --version
-          cargo --version
-      - name: Cache cargo registry
-        uses: actions/cache@v1
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-      - name: Cache cargo build
-        uses: actions/cache@v1
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-lint-target-${{ hashFiles('**/Cargo.lock') }}
+          toolchain: stable
+          override: true
+          profile: minimal
+          components: clippy
 
       - name: Run clippy
-        run: cargo clippy --verbose --all-targets --all-features -- -D warnings
-      - name: Check format
-        run: cargo fmt -- --check --verbose
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --verbose --all-targets --all-features -- -D clippy::all -D clippy::pedantic
 
-  test:
-    name: Test
+  rustfmt:
+    name: Rustfmt
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
       - uses: actions/checkout@v2
-      - name: 'Log versions'
-        run: |
-          rustc --version
-          cargo --version
-      - name: Cache cargo registry
-        uses: actions/cache@v1
-        with:
-          path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-      - name: Cache cargo build
-        uses: actions/cache@v1
-        with:
-          path: target
-          key: ${{ runner.os }}-cargo-test-target-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Build
-        run: cargo build --verbose --locked --all-targets
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+          profile: minimal
+          components: rustfmt
+
+      - name: Check format
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: -- --check --verbose
+
+  test:
+    name: Test ${{ matrix.os }} ${{ matrix.toolchain }}
+    runs-on: ${{ matrix.os }}
+    needs: clippy
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macOS-latest, windows-latest]
+        toolchain: [stable, nightly]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.toolchain }}
+          profile: minimal
+          override: true
 
       - name: Run tests
-        run: cargo test --verbose --all-targets
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --verbose --locked --all-features
 
   release:
-    name: Release ${{ matrix.config.triple }}
-    runs-on: ${{ matrix.config.os }}
+    name: Release ${{ matrix.triple }}
+    runs-on: ${{ matrix.os }}
+    needs: test
     strategy:
+      fail-fast: false
       matrix:
-        config:
+        include:
           - os: ubuntu-latest
             triple: x86_64-unknown-linux-gnu
+          - os: ubuntu-latest
+            triple: arm-unknown-linux-gnueabihf
           - os: ubuntu-latest
             triple: armv7-unknown-linux-gnueabihf
           - os: ubuntu-latest
@@ -75,79 +98,46 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Log versions
-        run: |
-          rustc --version
-          cargo --version
 
-      - name: Prepare Windows
-        if: runner.os == 'Windows'
-        run: choco install --no-progress llvm
-
-      - name: install cross-compile armv7
-        if: matrix.config.triple == 'armv7-unknown-linux-gnueabihf'
-        run: |
-          sudo apt-get install -y g++-arm-linux-gnueabihf llvm
-          mkdir -p ~/.cargo
-          echo '[target.${{ matrix.config.triple }}]' > ~/.cargo/config
-          echo 'linker = "arm-linux-gnueabihf-g++"' >> ~/.cargo/config
-
-      - name: install cross-compile arm64
-        if: matrix.config.triple == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt-get install -y g++-aarch64-linux-gnu llvm
-          mkdir -p ~/.cargo
-          echo '[target.${{ matrix.config.triple }}]' > ~/.cargo/config
-          echo 'linker = "aarch64-linux-gnu-g++"' >> ~/.cargo/config
-
-      - name: Add Target
-        run: rustup target add ${{ matrix.config.triple }}
-
-      - name: Cache cargo registry
-        uses: actions/cache@v1
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
         with:
-          path: ~/.cargo/registry
-          key: ${{ matrix.config.triple }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
-      - name: Cache cargo build
-        uses: actions/cache@v1
-        with:
-          path: target
-          key: ${{ matrix.config.triple }}-cargo-release-target-${{ hashFiles('**/Cargo.lock') }}
+          toolchain: stable
+          override: true
+          profile: minimal
+          target: ${{ matrix.triple }}
 
       - name: Build release
-        run: cargo build --release --verbose --locked --all-targets --target ${{ matrix.config.triple }}
-
-      - name: inspect target dir
-        if: runner.os == 'Linux' || runner.os == 'macOS'
-        run: ls -al target/*/release
-
-      - name: Upload Artifact (linux, mac)
-        if: runner.os == 'Linux' || runner.os == 'macOS'
-        uses: actions/upload-artifact@v2
+        uses: actions-rs/cargo@v1
         with:
-          name: mpd-internetradio-destuck-${{ matrix.config.triple }}
-          path: target/${{ matrix.config.triple }}/release/mpd-internetradio-destuck
-      - name: Upload Artifact (windows)
-        if: runner.os == 'Windows'
-        uses: actions/upload-artifact@v2
-        with:
-          name: mpd-internetradio-destuck-${{ matrix.config.triple }}
-          path: target/${{ matrix.config.triple }}/release/mpd-internetradio-destuck.exe
+          command: build
+          args: --release --verbose --locked --target ${{ matrix.triple }}
+          use-cross: ${{ runner.os == 'Linux' && matrix.triple != 'x86_64-unknown-linux-gnu' }}
 
-      - name: Pack release (linux, mac)
-        if: runner.os == 'Linux' || runner.os == 'macOS'
+      - name: Pack release (-nix)
+        if: runner.os != 'Windows'
         run: |
-          rm -f *.tar.gz
-          tar -czf mpd-internetradio-destuck-${{ matrix.config.triple }}.tar.gz -C target/${{ matrix.config.triple }}/release mpd-internetradio-destuck
+          cd target/${{ matrix.triple }}/release
+          tar -czvf ../../../mpd-internetradio-destuck-${{ matrix.triple }}.tar.gz mpd-internetradio-destuck
+          cd -
       - name: Pack release (windows)
         if: runner.os == 'Windows'
         run: |
-          del *.zip
-          Compress-Archive -CompressionLevel Optimal -Force -Path target/${{ matrix.config.triple }}/release/mpd-internetradio-destuck.exe -DestinationPath mpd-internetradio-destuck-${{ matrix.config.triple }}.zip
+          cd target/${{ matrix.triple }}/release
+          7z a ../../../mpd-internetradio-destuck-${{ matrix.triple }}.zip mpd-internetradio-destuck.exe
+          cd -
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.triple }}
+          path: |
+            *.zip
+            *.tar.gz
 
       - name: GH Release
         if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v0.1.5
+        uses: softprops/action-gh-release@v1
         with:
           draft: true
           files: |
