chore(license): specify as MIT

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "mpd-internetradio-destuck"
 version = "0.2.0"
+license = "MIT"
 authors = ["EdJoPaTo <git-commit-with-a-funny-long-email-address-everyone-hates-as-it-is-too-long@edjopato.de>"]
 edition = "2018"
 
