chore(systemd): use DynamicUser
no specific user required

--- a/mpd-internetradio-destuck.service
+++ b/mpd-internetradio-destuck.service
@@ -6,8 +6,7 @@ After=network-online.target
 [Service]
 Type=simple
 ExecStart=/usr/local/bin/mpd-internetradio-destuck
-User=pi
-Group=pi
+DynamicUser=true
 Restart=on-failure
 RestartSec=5s
 
