--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,81 +1,56 @@
-name: Rust
+name: Test and Build Rust
 
 on:
   push:
   pull_request:
 
 jobs:
-  clippy:
-    name: Clippy ${{ matrix.os }}
+  test:
+    name: Test ${{ matrix.os }} ${{ matrix.toolchain }}
     runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.toolchain == 'nightly' }}
     strategy:
       fail-fast: false
       matrix:
-        os:
-          - ubuntu-latest
-          - macOS-latest
-          - windows-latest
+        include:
+          - os: ubuntu-latest
+            toolchain: stable
+            clippyargs: -D clippy::all -D clippy::pedantic
+          - os: macOS-latest
+            toolchain: stable
+            clippyargs: -D clippy::all -D clippy::pedantic
+          - os: windows-latest
+            toolchain: stable
+            clippyargs: -D clippy::all -D clippy::pedantic
+
+          - os: ubuntu-latest
+            toolchain: nightly
+            clippyargs: -W clippy::all -W clippy::pedantic
+          - os: ubuntu-latest
+            toolchain: 1.41.1 # Debian 10 Buster
+            clippyargs: -W clippy::all -W clippy::pedantic -A unknown-lints -A clippy::unknown-clippy-lints
+          - os: ubuntu-latest
+            toolchain: 1.47.0 # Alpine 3.13
+            clippyargs: -W clippy::all -W clippy::pedantic -A unknown-lints -A clippy::unknown-clippy-lints
+          - os: ubuntu-latest
+            toolchain: 1.48.0 # Debian 11 Bullseye
+            clippyargs: -W clippy::all -W clippy::pedantic -A unknown-lints -A clippy::unknown-clippy-lints
     steps:
       - uses: actions/checkout@v2
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          components: clippy
           override: true
           profile: minimal
-          components: clippy
+          toolchain: ${{ matrix.toolchain }}
 
       - name: Run clippy
         uses: actions-rs/cargo@v1
         with:
           command: clippy
-          args: --verbose --locked --all-targets --all-features -- -D clippy::all -D clippy::pedantic
-
-  rustfmt:
-    name: Rustfmt
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-          override: true
-          profile: minimal
-          components: rustfmt
-
-      - name: Check format
-        uses: actions-rs/cargo@v1
-        with:
-          command: fmt
-          args: -- --check --verbose
-
-  test:
-    name: Test ${{ matrix.os }} ${{ matrix.toolchain }}
-    runs-on: ${{ matrix.os }}
-    needs: clippy
-    strategy:
-      fail-fast: false
-      matrix:
-        os:
-          - ubuntu-latest
-          - macOS-latest
-          - windows-latest
-        toolchain:
-          - stable
-          - nightly
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          toolchain: ${{ matrix.toolchain }}
-          profile: minimal
-          override: true
+          args: --verbose --locked --all-targets --all-features -- ${{ matrix.clippyargs }}
 
       - name: Run tests
         uses: actions-rs/cargo@v1
@@ -105,17 +80,28 @@ jobs:
             triple: aarch64-apple-darwin
           - os: windows-latest
             triple: x86_64-pc-windows-msvc
+          - os: windows-latest
+            triple: aarch64-pc-windows-msvc
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Get the version from the tag
+        shell: bash
+        run: |
+          version=$(git describe --tags --match "v*.*.*" --always)
+          echo "version is: $version"
+          echo "GIT_TAG_VERSION=$version" >> $GITHUB_ENV
 
       - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
           override: true
           profile: minimal
           target: ${{ matrix.triple }}
+          toolchain: stable
 
       - name: Build release
         uses: actions-rs/cargo@v1
@@ -131,13 +117,13 @@ jobs:
         if: runner.os != 'Windows'
         run: |
           cd target/${{ matrix.triple }}/release
-          tar -czvf ../../../mpd-internetradio-destuck-${{ matrix.triple }}.tar.gz mpd-internetradio-destuck
+          tar -czvf ../../../mpd-internetradio-destuck-${{ env.GIT_TAG_VERSION }}-${{ matrix.triple }}.tar.gz mpd-internetradio-destuck
           cd -
       - name: Pack release (windows)
         if: runner.os == 'Windows'
         run: |
           cd target/${{ matrix.triple }}/release
-          7z a ../../../mpd-internetradio-destuck-${{ matrix.triple }}.zip mpd-internetradio-destuck.exe
+          7z a ../../../mpd-internetradio-destuck-${{ env.GIT_TAG_VERSION }}-${{ matrix.triple }}.zip mpd-internetradio-destuck.exe
           cd -
 
       - name: Upload Artifact
