fixup! chore: update to my current way of doing things

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ assets = [
     ["LICENSE", "/usr/share/licenses/mpd-internetradio-destuck/LICENSE", "644"],
     ["README.md", "/usr/share/doc/mpd-internetradio-destuck/README.md", "644"],
 
-    ["systemd/user/service", "/lib/systemd/user/mpd-internetradio-destuck.service", "644"],
+    ["systemd/system/service", "/lib/systemd/system/mpd-internetradio-destuck.service", "644"],
 ]
 
 # https://crates.io/crates/cargo-generate-rpm
