--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -111,7 +111,6 @@ jobs:
         with:
           command: install
           args: cargo-deb
-
       - name: Setup rpm tools
         if: matrix.rpm
         uses: actions-rs/cargo@v1
@@ -152,7 +151,7 @@ jobs:
         run: >
           tar -cv
           LICENSE README.md
-          systemd/**/*.service
+          systemd
           -C target/${{ matrix.triple }}/release/ mpd-internetradio-destuck
           | gzip --best > ${{ env.ARTIFACT_NAME }}.tar.gz
       - name: Package zip (Windows)
