--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -146,7 +146,7 @@ jobs:
         with:
           command: build
           args: --release --verbose --locked --all-features --target ${{ matrix.triple }}
-          use-cross: ${{ runner.os == 'Linux' && matrix.triple != 'x86_64-unknown-linux-gnu' }}
+          use-cross: ${{ runner.os == 'Linux' }}
 
       - name: Package tar.gz (*nix)
         if: runner.os != 'Windows'
