--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,18 @@ on:
   pull_request:
 
 jobs:
+  rustfmt:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Setup Rust
+        shell: bash -eux {0}
+        run: |
+          rm ~/.cargo/bin/{rustfmt,cargo-fmt}
+          rustup toolchain install stable --profile minimal --component rustfmt
+          rustup default stable
+      - uses: actions/checkout@v3
+      - run: cargo fmt --check --verbose
+
   test:
     name: Test ${{ matrix.toolchain }} ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -15,9 +27,9 @@ jobs:
         toolchain:
           - stable
         os:
-          - ubuntu-22.04
-          - macos-12
-          - windows-2022
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
         clippyargs:
           - -D clippy::pedantic -D warnings
         features:
@@ -25,21 +37,19 @@ jobs:
         include:
           # Check future versions and maybe get some glances on soon to be lints
           - toolchain: beta
-            os: ubuntu-22.04
+            os: ubuntu-latest
             features: --all-features
             clippyargs: -W clippy::pedantic -W clippy::nursery
           - toolchain: nightly
-            os: ubuntu-22.04
+            os: ubuntu-latest
             features: --all-features
             clippyargs: -W clippy::pedantic
     steps:
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          components: clippy
-          override: true
-          profile: minimal
-          toolchain: ${{ matrix.toolchain }}
+        shell: bash -eux {0}
+        run: |
+          rustup toolchain install ${{ matrix.toolchain }} --profile minimal --component clippy
+          rustup default ${{ matrix.toolchain }}
 
       - uses: actions/checkout@v3
 
@@ -67,58 +77,73 @@ jobs:
           command: test
           args: --verbose --locked ${{ matrix.features }}
 
+  prepare-packaging-tools:
+    runs-on: ubuntu-latest
+    permissions: {}
+    steps:
+      - name: Setup Rust
+        shell: bash -eux {0}
+        run: |
+          rustup toolchain install stable --profile minimal
+          rustup default stable
+      - name: Cache packaging tools
+        uses: actions/cache@v3
+        with:
+          key: ${{ runner.os }}-cargo-packaging-tools
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/.crates*
+      - name: Install packaging tools
+        run: cargo install cargo-deb cargo-generate-rpm
+
   github-release:
     name: Release ${{ matrix.triple }}
     runs-on: ${{ matrix.os }}
-    needs: test
+    needs: [test, prepare-packaging-tools]
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
         include:
           - triple: x86_64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
             rpm: true
           - triple: aarch64-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
             rpm: true
           - triple: armv7-unknown-linux-gnueabihf
-            os: ubuntu-22.04
+            os: ubuntu-latest
             rpm: true
           - triple: arm-unknown-linux-gnueabihf
-            os: ubuntu-22.04
+            os: ubuntu-latest
           - triple: riscv64gc-unknown-linux-gnu
-            os: ubuntu-22.04
+            os: ubuntu-latest
 
           - triple: x86_64-apple-darwin
-            os: macos-12
+            os: macos-latest
           - triple: aarch64-apple-darwin
-            os: macos-12
+            os: macos-latest
 
           - triple: x86_64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
           - triple: aarch64-pc-windows-msvc
-            os: windows-2022
+            os: windows-latest
     steps:
       - name: Setup Rust
-        uses: actions-rs/toolchain@v1
-        with:
-          override: true
-          profile: minimal
-          target: ${{ matrix.triple }}
-          toolchain: stable
+        shell: bash -eux {0}
+        run: |
+          rustup toolchain install stable --profile minimal --target ${{ matrix.triple }}
+          rustup default stable
 
-      - name: Setup deb tools
+      - name: Get packaging tools from cache
         if: runner.os == 'Linux'
-        uses: actions-rs/cargo@v1
+        uses: actions/cache@v3
         with:
-          command: install
-          args: cargo-deb
-      - name: Setup rpm tools
-        if: matrix.rpm
-        uses: actions-rs/cargo@v1
-        with:
-          command: install
-          args: cargo-generate-rpm
+          key: ${{ runner.os }}-cargo-packaging-tools
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/.crates*
 
       - uses: actions/checkout@v3
         with:
@@ -136,10 +161,7 @@ jobs:
           echo "ARTIFACT_NAME=$name" >> $GITHUB_ENV
 
       - name: Fetch dependencies
-        uses: actions-rs/cargo@v1
-        with:
-          command: fetch
-          args: --verbose --locked
+        run: cargo fetch --verbose --locked
 
       - name: Build
         uses: actions-rs/cargo@v1
