--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,7 +14,7 @@ jobs:
           rm ~/.cargo/bin/{rustfmt,cargo-fmt}
           rustup toolchain install stable --profile minimal --component rustfmt
           rustup default stable
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - run: cargo fmt --check --verbose
 
   test:
@@ -51,7 +51,7 @@ jobs:
           rustup toolchain install ${{ matrix.toolchain }} --profile minimal --component clippy
           rustup default ${{ matrix.toolchain }}
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Fetch dependencies
         uses: actions-rs/cargo@v1
@@ -145,7 +145,7 @@ jobs:
             ~/.cargo/bin/
             ~/.cargo/.crates*
 
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -189,7 +189,7 @@ jobs:
         run: cargo deb --verbose --no-build --no-strip --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.deb
       - name: Package rpm
         if: matrix.rpm
-        run: cargo generate-rpm --auto-req no --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.rpm
+        run: cargo generate-rpm --auto-req disabled --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.rpm
 
       - name: Upload artifact
         uses: actions/upload-artifact@v3
