--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,6 +3,7 @@ name: Test and Build Rust
 on:
   push:
   pull_request:
+  workflow_dispatch:
 
 jobs:
   rustfmt:
@@ -16,53 +17,56 @@ jobs:
       - uses: actions/checkout@v4
       - run: cargo fmt --check --verbose
 
-  test:
-    name: Test ${{ matrix.toolchain }} ${{ matrix.os }} ${{ matrix.features }}
-    runs-on: ${{ matrix.os }}
+  clippy:
+    name: Clippy ${{ matrix.toolchain }}
+    runs-on: ubuntu-latest
     continue-on-error: ${{ (matrix.toolchain == 'beta') || (matrix.toolchain == 'nightly') }}
     strategy:
       fail-fast: false
       matrix:
         toolchain:
           - stable
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-        clippyargs:
-          - -D warnings -D clippy::pedantic
-        features:
-          - "" # default features
-        include:
-          # Check future versions and maybe get some glances on soon to be lints
-          - toolchain: beta
-            os: ubuntu-latest
-            features: --all-features
-            clippyargs: -D warnings -D clippy::pedantic -D clippy::nursery
-          - toolchain: nightly
-            os: ubuntu-latest
-            features: --all-features
-            clippyargs: -D warnings -D clippy::pedantic
+          - beta
+          - nightly
+    env:
+      RUSTFLAGS: --deny warnings
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
           components: clippy
-
       - uses: actions/checkout@v4
+      - run: cargo fetch --locked
+      - run: cargo clippy --offline --all-targets
+      - run: cargo doc --offline --no-deps
 
-      - name: Fetch dependencies
-        run: cargo fetch --verbose --locked
-
-      - name: Check clippy
-        run: cargo clippy --verbose --locked --all-targets ${{ matrix.features }} -- ${{ matrix.clippyargs }}
-
-      - name: Check docs
-        run: cargo doc --verbose --locked --no-deps ${{ matrix.features }}
-
-      - name: Run tests
-        run: cargo test --verbose --locked ${{ matrix.features }}
+  test:
+    name: Test ${{ matrix.toolchain }} ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    continue-on-error: ${{ matrix.toolchain == 'nightly' }}
+    strategy:
+      fail-fast: false
+      matrix:
+        toolchain:
+          - stable
+          - beta
+          - nightly
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+    env:
+      RUSTFLAGS: --allow unknown-lints --deny warnings
+    steps:
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: ${{ matrix.toolchain }}
+      - uses: actions/checkout@v4
+      - run: cargo fetch --locked
+      - run: cargo build --offline --all-targets
+      - run: cargo test --offline
 
   github-release:
     name: Release ${{ matrix.triple }}
@@ -97,6 +101,8 @@ jobs:
             os: windows-latest
           - triple: aarch64-pc-windows-msvc
             os: windows-latest
+    env:
+      RUSTFLAGS: --allow unknown-lints --deny warnings
     steps:
       - name: Setup Rust
         uses: dtolnay/rust-toolchain@master
@@ -125,11 +131,10 @@ jobs:
           echo "artifact: $name"
           echo "ARTIFACT_NAME=$name" >> $GITHUB_ENV
 
-      - name: Fetch dependencies
-        run: cargo fetch --verbose --locked
+      - run: cargo fetch --locked
 
       - name: Build
-        run: ${{ runner.os == 'Linux' && 'cross' || 'cargo' }} build --release --verbose --locked --target ${{ matrix.triple }}
+        run: ${{ runner.os == 'Linux' && 'cross' || 'cargo' }} build --release --offline --target ${{ matrix.triple }}
 
       - name: Package tar.gz (*nix)
         if: runner.os != 'Windows'
@@ -147,13 +152,13 @@ jobs:
           ./target/${{ matrix.triple }}/release/mpd-internetradio-destuck.exe
       - name: Package deb
         if: runner.os == 'Linux'
-        run: cargo deb --verbose --no-build --no-strip --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.deb
+        run: cargo deb --no-build --no-strip --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.deb
       - name: Package rpm
         if: matrix.rpm
         run: cargo generate-rpm --auto-req disabled --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.rpm
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.triple }}
           path: |
@@ -164,7 +169,7 @@ jobs:
 
       - name: Create GitHub release
         if: startsWith(github.ref, 'refs/tags/v')
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2
         with:
           files: |
             *.deb
