--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,7 +1,8 @@
-name: Test and Build Rust
+name: Rust
 
 on:
   push:
+    branches-ignore: ["dependabot/**"]
   pull_request:
   workflow_dispatch:
 
@@ -16,7 +17,6 @@ jobs:
       - run: cargo fmt --check --verbose
 
   clippy:
-    name: Clippy ${{ matrix.toolchain }}
     runs-on: ubuntu-latest
     continue-on-error: ${{ (matrix.toolchain == 'beta') || (matrix.toolchain == 'nightly') }}
     strategy:
@@ -29,47 +29,18 @@ jobs:
     env:
       RUSTFLAGS: --deny warnings
     steps:
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
           components: clippy
       - uses: actions/checkout@v4
-      - run: cargo fetch --locked
+      - run: cargo fetch
       - run: cargo clippy --offline --all-targets
       - run: cargo doc --offline --no-deps
 
-  test:
-    name: Test ${{ matrix.toolchain }} ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    continue-on-error: ${{ matrix.toolchain == 'nightly' }}
-    strategy:
-      fail-fast: false
-      matrix:
-        toolchain:
-          - stable
-          - beta
-          - nightly
-        os:
-          - ubuntu-latest
-          - macos-latest
-          - windows-latest
-    env:
-      RUSTFLAGS: --allow unknown-lints --deny warnings
-    steps:
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.toolchain }}
-      - uses: actions/checkout@v4
-      - run: cargo fetch --locked
-      - run: cargo build --offline --all-targets
-      - run: cargo test --offline
-
-  github-release:
+  release:
     name: Release ${{ matrix.triple }}
     runs-on: ${{ matrix.os }}
-    needs: test
     permissions:
       contents: write
     strategy:
@@ -100,12 +71,10 @@ jobs:
           - triple: aarch64-pc-windows-msvc
             os: windows-latest
     env:
-      RUSTFLAGS: --allow unknown-lints --deny warnings
+      RUSTFLAGS: --deny warnings
     steps:
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
         with:
-          toolchain: stable
           targets: ${{ matrix.triple }}
 
       - name: Install cargo tools
@@ -131,8 +100,7 @@ jobs:
 
       - run: cargo fetch --locked
 
-      - name: Build
-        run: ${{ runner.os == 'Linux' && 'cross' || 'cargo' }} build --release --offline --target ${{ matrix.triple }}
+      - run: ${{ runner.os == 'Linux' && 'cross' || 'cargo' }} build --release --offline --target ${{ matrix.triple }}
 
       - name: Package tar.gz (*nix)
         if: runner.os != 'Windows'
@@ -155,8 +123,7 @@ jobs:
         if: matrix.rpm
         run: cargo generate-rpm --auto-req disabled --target ${{ matrix.triple }} --output ${{ env.ARTIFACT_NAME }}.rpm
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.triple }}
           path: |
